--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "scratch-clone",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
-    "vite": "^7.0.0"
+    "vite": "^4.0.0"
   }
 }
